# 2026-02-02_bible-verse-automation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
assets/: chat_343889571060383744.json  persist.json
source/: bible_api.py  bot.py  conversation.py  interactive_ui.py  scheduler.py  server.py  storage.py
