[project]
name = "2026-02-02-bible-verse-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.10.4",
    "discord>=2.3.2",
    "discord-py>=2.3.2",
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
    "requests>=2.31.0",
]
